--- a/src/elan/devcontainer-feature.json
+++ b/src/elan/devcontainer-feature.json
@@ -1,15 +1,16 @@
 {
     "name": "Install elan",
     "id": "elan",
-    "version": "0.0.4",
+    "version": "0.1.1",
     "description": "A simple feature used to install elan in devcontainers",
     "options": {
         "toolchain": {
             "type": "string",
             "proposals": [
+                "none",
                 "leanprover/lean4:nightly"
             ],
-            "default": "leanprover/lean4:nightly",
+            "default": "none",
             "description": "Select a lean toolchain"
         }
     },
